# Arbiter

./: .gitignore  AGENTS.md  DESIGN.md  README.md  main.md  pyproject.toml
.claude/: h5i.md
branches/main/: commit.md  dag.json  trace.md
examples/: README.md
examples/eval_calc/: __init__.py
examples/jinja_render/: __init__.py
examples/pickle_session/: __init__.py
examples/shell_cat/: __init__.py
scripts/: probe_discover.py  replay_workers.py
snapshots/: 589d5f7a.md  90fd1f43.md  b0bc1a2b.md  b5015264.md  dde45a06.md
src/arbiter/: __init__.py  cli.py  corpus.py  imports.py  models.py  oracle.py  orchestrator.py  report.py  sinks.py  source_excerpt.py  static_targets.py  triage.py  worker.py
src/arbiter/llm/: __init__.py  discover.py  reachability.py  sdk.py  synthesize.py
src/arbiter/mutators/: __init__.py  grammar.py  grammars.py  tokens.py
src/arbiter/payloads/: __init__.py  code_exec.py  deserialization.py  imports.py  path.py  process.py  template.py  xml.py
tests/: conftest.py  test_cli.py  test_corpus.py  test_discover.py  test_discover_live.py  test_grammar.py  test_imports.py  test_mutators.py  test_oracle.py  test_orchestrator.py  test_payloads.py  test_reachability.py  test_reachability_live.py  test_report.py  test_sdk.py  test_sinks.py  test_static_targets.py  test_synthesize.py  test_synthesize_live.py  test_tokens.py  test_triage.py  test_worker.py  test_wrapper_sinks.py
tests/fixtures/vulnpkg/: __init__.py  api.py
