[project]
name = "arbiter"
version = "0.0.1"
description = "LLM-augmented Hypothesis fuzzer for Python arbitrary-code-execution detection"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Arbiter Contributors" }]
dependencies = [
    "hypothesis>=6.100",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
fixtures = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
arbiter = "arbiter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbiter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
timeout = 30
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
